Styled global layout and add new colors

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,7 @@
-$backgroud-color: #121212;
+$backgroud-color: #323232;
 $primary-color: #ffd180;
 $secondary-color: #80aeff;
-$error-color: #ef9a9a;
+$error-color: #ef5350;
+$extra-error-color: #93100E;
 $text-color: #fafafa;
-$sub-color: #9e9e9e;
+$sub-color: #707070;
