--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Thai:wght@400;500;700&family=Roboto+Mono:wght@400;500;700&display=swap');
-@import './colors.scss';
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Thai:wght@400;500;700&family=Roboto+Mono:wght@400;500;700&display=swap");
+@import "./colors.scss";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
-    font-family: 'Roboto Mono', 'Noto Serif Thai', serif;
-    margin: 0;
-    box-sizing: border-box;
-    color: $text-color;
-    background-color: $backgroud-color;
+  font-family: "Roboto Mono", "Noto Serif Thai", serif;
+  margin: 0;
+  color: $text-color;
+  background-color: $backgroud-color;
 }
